# tofnd

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.test.yml  docker-compose.unsafe.yml  docker-compose.yml  entrypoint.sh  install-gmp-arm64.sh  keygen-architecture.html  sign-architecture.html  test.md
.github/: CODEOWNERS
.github/workflows/: build-docker-image-and-binaries.yaml  build-docker-image-and-binaries.yaml.bak  build-docker-image.yaml  build-image-no-upload.yaml  build-latest-docker-image.yaml  build-release-docker-image.yaml  format.yaml  lint.yaml  matrix-build.yaml  release.yaml  test.yaml
proto/: tofnd.proto  tssd.proto
scripts/: copy-binaries-from-image.sh
src/: encryption.rs  gg20.rs  kv_manager.rs  lib.rs  main.rs  multi_party_ecdsa_common.rs  tests.rs
src/config/: malicious.rs  mod.rs
src/encrypted_kv/: kv.rs  mod.rs  record.rs  tests.rs
src/encrypted_sled/: constants.rs  error.rs  kv.rs  mod.rs  password.rs  record.rs  result.rs  tests.rs  types.rs
src/encrypted_sled/testdata/: chacha20poly1305_kdf_known_vector.golden  encrypt_with_nonce_known_vector.golden
src/gg20/: broadcast.rs  key_presence.rs  keygen.rs  malicious.rs  mnemonic.rs  mod.rs  proto_helpers.rs  protocol.rs  protocol_new.rs  recover.rs  routing.rs  service.rs  sign.rs  types.rs
src/gg20/keygen/: aggregate.rs  error.rs  execute.rs  init.rs  mod.rs  result.rs  types.rs
src/gg20/mnemonic/: bip39_bindings.rs  cmd_handler.rs  error.rs  file_io.rs  mod.rs  results.rs
src/gg20/service/: malicious.rs  mod.rs
src/gg20/sign/: execute.rs  init.rs  mod.rs  result.rs  types.rs
src/grpc/: key_presence.rs  mod.rs  proto_helpers.rs  protocol.rs  recover.rs  types.rs
src/grpc/keygen/: execute.rs  handler.rs  init.rs  mod.rs  result.rs  types.rs
src/grpc/keygen/execute/: base.rs  gg20.rs  mod.rs  multisig.rs
src/grpc/keygen/gg20/: execute.rs  mod.rs  result.rs  types.rs
src/grpc/keygen/multisig/: execute.rs  mod.rs  result.rs  types.rs
src/grpc/keygen/result/: base.rs  gg20.rs  mod.rs  multisig.rs
src/grpc/keygen/types/: common.rs  gg20.rs  mod.rs  multisig.rs
src/grpc/mnemonic/: bip39_bindings.rs  cmd_handler.rs  file_io.rs  mod.rs
src/grpc/service/: mod.rs
src/grpc/sign/: execute.rs  init.rs  mod.rs  result.rs  types.rs
src/grpc/types/: common.rs  gg20.rs  mod.rs  multisig.rs
src/kv_manager/: encryption.rs  error.rs  kv.rs  mod.rs  sled_bindings.rs  tests.rs  types.rs  value.rs
src/mnemonic/: bip39_bindings.rs  cmd_handler.rs  file_io.rs  mod.rs  results.rs  types.rs
src/mnemonic/testdata/: seed_known_vector.golden
src/multisig/: key_presence.rs  keygen.rs  keypair.rs  mod.rs  service.rs  sign.rs  tests.rs
src/password/: constants.rs  mod.rs  password_methods.rs  prompt.rs  result.rs  types.rs
src/tests/: honest_test_cases.rs  keygen_party.rs  malicious_test_cases.rs  mnemonic.rs  mock.rs  mod.rs  socket_address.rs  test_cases.rs  tofnd_party.rs  tssd_party.rs
src/tests/malicious/: keygen_test_cases.rs  mod.rs  sign_test_cases.rs
